# girl-image-crawler

./: .gitignore  README.md  TECHNICAL_DESIGN.md  base_crawler.py  check_sites.py  config.py  downloader.py  main.py  playwright_crawler.py  pyproject.toml  test_all.py  test_playwright_crawlers.py
crawlers/: __init__.py  asiantolick.py  everiaclub.py  hitxhot.py  hotgirl.py  kanxiaojiejie.py  nsfwpicx.py  tuiimg.py  wallhaven.py  xiurenwang.py
